# git-sync

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  TODO.md  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
configs/: 01-global.yaml  02-project-alpha.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: index.js
frontend/src/views/: Dashboard.vue  History.vue  KeyList.vue  RepositoryForm.vue  RepositoryList.vue  Settings.vue
git_sync/: __init__.py  __main__.py  cli.py
git_sync/config/: __init__.py  loader.py  schema.py
git_sync/core/: __init__.py  exceptions.py  repository.py  sync.py
git_sync/ssh/: __init__.py  key_manager.py  ssh_config.py
git_sync/utils/: __init__.py  logger.py
git_sync/web/: __init__.py  app.py  history.py  scheduler.py  schemas.py
git_sync/web/api/: __init__.py  config.py  history.py  keys.py  repositories.py  scheduler.py  sync.py
